--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,50 @@
     padding: 0;
     text-transform: capitalize;
 }
+
+/* banner css starts */
+
+.carousel-item{
+    position: relative;
+    z-index: -1;
+}
+.carousel-item .overlay::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0000004b;
+    z-index: 1;
+}
+.carousel-caption{
+    z-index: 2;
+}
+
+.carousel-caption h5{
+    font-weight: 600;
+    font-size: 48px;  
+    color: #FFFFFF;  
+    padding: 0 150px;
+}
+.carousel-caption p{
+    font-weight: 300;
+    font-size: 16px;  
+    color: #FFFFFF;  
+    padding: 0 280px;
+}
+
+.carousel-caption a{
+    display: inline-block;
+    font-weight: 700;
+    font-size: 16px;
+    color: #3F87F5;  
+    text-decoration: none;
+    text-transform: capitalize;
+    padding: 10px 43.5px;
+    border-radius: 5px;
+    cursor: pointer;  
+    background-color: #FFFFFF;
+    margin-bottom: 42px;
+}
